[gd_scene load_steps=2 format=3 uid="uid://drwujnhgbql13"]

[ext_resource type="Script" uid="uid://ci65mb8p3df8g" path="res://scripts/task.gd" id="1_kolu2"]

[node name="Task" type="VBoxContainer"]
offset_right = 386.0
offset_bottom = 117.0
script = ExtResource("1_kolu2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LineEdit" type="TextEdit" parent="HBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
placeholder_text = "NEW TASK"

[node name="AddChild" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "+"

[node name="Duration" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 5
popup/item_0/text = "2 min"
popup/item_0/id = 0
popup/item_1/text = "5 min"
popup/item_1/id = 1
popup/item_2/text = "10 min"
popup/item_2/id = 2
popup/item_3/text = "30 min"
popup/item_3/id = 3
popup/item_4/text = "60+ min"
popup/item_4/id = 4

[node name="Delete" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "X"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 30

[node name="SubTaskList" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/AddChild" to="." method="_on_add_child_pressed"]
[connection signal="pressed" from="HBoxContainer/Delete" to="." method="_on_delete_pressed"]
